Fix selected rows that scroll in a TreeView having incorrect damage.

When the TreeView scheduled a paint it was using the wrong bounds when
the platform wanted to only highlight the row's text (i.e. on Windows).
This resulted in some areas not being repainted when a long selected row
scrolls to the right (in LTR).

Bug: 779983
Change-Id: I5210d5337a7ad2a6ae6dbaf85ba2601862c7accd
Reviewed-on: https://chromium-review.googlesource.com/748209
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#513931}
Former-commit-id: a7ad077437ea1ae74cf4c19aab93723c7230f7ad